# cs336_basics

./: README.md  github_guide.md  guide.md  pyproject.toml
cs336_basics/: building_blocks.py  layers.py  model.py  model_config.json  optimizer.py  scheduler.py  train.py  utils.py
